--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,7 +21,7 @@ jobs:
           fetch-depth: 1
       - name: Run the application tests
         run: |
-          logtalk_tester -f tap -c xml
+          logtalk_tester -f tap -c xml -p swi
           xsltproc --stringparam prefix work/$(basename $GITHUB_REPOSITORY)/$(basename $GITHUB_REPOSITORY)/ --stringparam url https://github.com/$GITHUB_REPOSITORY/tree/$GITHUB_SHA -o coverage_report.html coverage_report.xml
       - name: Upload TAP report
         uses: actions/upload-artifact@master
